[project]
name = "interactive-learning-541"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ipykernel>=6.16.2",
    "matplotlib>=3.5.3",
    "numpy>=1.21.6",
    "typing>=3.10.0.0",
    "typing-extensions>=4.7.1",
    "yfinance>=0.1.87",
]
